src/main/java/com/example/splitt/error/exception/EntityNotFoundException.java
package com.example.splitt.error.exception;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Getter
@Setter
@NoArgsConstructor
public class EntityNotFoundException extends RuntimeException {

    private Class<?> entityClass;

    public EntityNotFoundException(String message, Class<?> entityClass) {
        super(message);
        this.entityClass = entityClass;
    }
}
